[ST] Huge update of setup, utils, certs, constants and envs (#2381)
* Sts update, auth setup, versions, dependencies
* fixes for groups css
* new strimzi and kafka
* add released test-clients
* fix name
* fix groups test
* minor doc changes
* minor loading change

---------

Signed-off-by: jkalinic <jkalinic@redhat.com>